--- a/client/src/Styles/App.css
+++ b/client/src/Styles/App.css
@@ -1,6 +1,6 @@
 .App {
-    text-align: center;
-  }
+  text-align: center;
+}
   
 .App-logo {
   height: 40vmin;
@@ -37,12 +37,7 @@
   background-color: red;
 }
 
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body, html, .App, #root, .auth-wrapper {
+  width: 100%;
+  height: 100%;
 }
