--- a/client/src/Styles/App.css
+++ b/client/src/Styles/App.css
@@ -1,3 +1,18 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background: #FEFFFF !important;
+  min-height: 100vh;
+  display: flex;
+}
+
+body, html, .App, #root, .auth-wrapper {
+  width: 100%;
+  height: 100%;
+}
+
 .App {
   text-align: center;
 }
@@ -30,11 +45,6 @@
 
 .navContainer {
   height: 100%;
-}
-
-.bodyContainer {
-  height: 100%;
-  background-color: red;
 }
 
 body, html, .App, #root, .auth-wrapper {
