--- a/client/src/Styles/Signup.css
+++ b/client/src/Styles/Signup.css
@@ -1,16 +1,16 @@
 
-.loginContainer{
+.signupContainer{
     position: fixed;
     margin: 0;
     padding: 0;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 400px;
+    height: 500px;
     width: 300px;
 }
 
-.loginCard {
+.signupCard {
     width: 100%;
     height: 100%;
     padding: 30px;
@@ -21,7 +21,7 @@
     background-color: #f2f2f2;
 }
 
-.loginForm {
+.signupForm {
     position: relative;
     display: flex;
     flex-direction: column;
